# ProdTesisSoftware

./: ModeloTesis.postman_collection.json  README.md  docker-compose.yml
ML Model/: Model.py
MLModel/: ComparingModels.py  Correlation.py  DataAnalysis.py  DataCleaning.py  FinalDataCleaning.py  FinalDataFill.py  FinalDataPrep.py  Model.py  SaveTrainingModels.py  gradient_boosting_model.pkl
PROYECTO TESIS/: app.js  index.js  package-lock.json  package.json
Proyecto_Tesis/: app.js  package-lock.json  package.json  router.js
repo-tesis-main/backend/: docker-compose.yml  pyproject.toml  requirements.txt  runner.py
repo-tesis-main/backend/backend/: main.py
repo-tesis-main/backend/backend/controllers/: appointments_controller.py  login_controller.py  register_controller.py  triage_controller.py
repo-tesis-main/backend/backend/endpoints/: appointments.py  login.py  register.py  triage.py
repo-tesis-main/backend/backend/implementation/: appointments_repository_implementation.py  login_repository_implementation.py  register_repository_implementation.py  triage_repository_implementation.py
repo-tesis-main/backend/backend/models/: appointment.py  triage.py  user.py
repo-tesis-main/backend/backend/orm/models/: user.py
repo-tesis-main/backend/backend/repositories/: appointment_repository.py  login_repository.py  register_repository.py  triage_repository.py
repo-tesis-main/backend/backend/use_case/: appointment_use_case.py  base_use_case.py  login_use_case.py  register_use_case.py  triage_use_case.py
repo-tesis-main/backend/backend/utils/: utils.py
(+89 files in other folders)
