[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Johao-cynch <moralesjohao2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.115.6"
mangum = "^0.19.0"
python-dotenv = "1.0.1"
sqlalchemy = "^2.0.36"
werkzeug = "^3.1.3"
pydantic = "^2.10.4"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
